---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 72
expression: "snapshot_help(&[\"analyze\"])"
---
Analyze codebase (health, complexity, security, duplicates, docs)

Usage: moss analyze [OPTIONS] [COMMAND]

Commands:
  health               Run health analysis (file counts, complexity stats, large file warnings)
  complexity           Run complexity analysis
  length               Run function length analysis
  security             Run security analysis
  docs                 Analyze documentation coverage
  files                Show longest files in codebase
  trace                Trace value provenance for a symbol
  callers              Show what functions call a symbol
  callees              Show what functions a symbol calls
  hotspots             Show git history hotspots (frequently changed files)
  check-refs           Check documentation references for broken links
  stale-docs           Find documentation with stale code references
  check-examples       Check example references in documentation
  duplicate-functions  Detect duplicate functions (code clones)
  duplicate-types      Detect duplicate type definitions
  all                  Run all analysis passes
  ast                  Show AST for a file (for authoring syntax rules)
  query                Test a tree-sitter query against files
  rules                Run syntax rules from .moss/rules/*.scm
  help                 Print this message or the help of the given subcommand(s)

Options:
      --json               Output as JSON
      --jq <EXPR>          Filter JSON output with jq expression (implies --json)
  -r, --root <ROOT>        Root directory (defaults to current directory)
      --exclude <PATTERN>  Exclude paths matching pattern or @alias
      --pretty             Human-friendly output with colors and formatting
      --compact            Compact output without colors (overrides TTY detection)
      --only <PATTERN>     Include only paths matching pattern or @alias
      --diff [<BASE>]      Analyze only files changed since base ref (e.g., main, HEAD~1) If no BASE given, defaults to origin's default branch
  -h, --help               Print help
